--- a/packages/examples/simple-crm/app/css/app.css
+++ b/packages/examples/simple-crm/app/css/app.css
@@ -1,36 +1,49 @@
 
-body {
-  font-family: system-ui;
-  padding: 1em;
-}
-
-img {
-  max-width: 100%;
-}
 .app {
   display: flex;
-  gap: 3em;
+  gap: 1em;
 
-  > :first-child { width: 12em }
-  > main { flex: 1; }
-  > :last-child { width: 30em }
+  /* panel dimensions */
+  .navigation { min-width: 16em; }
+  main { flex-grow: 1 }
+  .details { min-width: 32em }
+
+
+  /* panel decoration */
+  .panel:not(.navigation) {
+    border-color: var(--alpha-100);
+    background-color: white;
+    padding-inline: 1.5em;
+    border-radius: .5em;
+
+    > header {
+      border-bottom: 1px solid var(--alpha-100);
+    }
+  }
+
+/*  main { display: none }*/
 }
 
-nav {
-  a {
-    display: block;
-    padding: .25em 0;
+
+.loading {
+  opacity: 0.1;
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+
+  &:nth-child(2) {
+    animation-delay: 0.25s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: .5s;
   }
 }
 
-.flex {
-  display: flex;
-
-  > div:last-child {
-    margin-left: auto;
-  }
+@keyframes pulse {
+  0%, 100% { opacity: 0.5; }
+  50% { opacity: 1; }
 }
 
-dialog::backdrop {
-  background: rgb(190 190 190 / 50%);
-}
+
+
+
+
