--- a/packages/examples/simple-crm/app/css/chat.css
+++ b/packages/examples/simple-crm/app/css/chat.css
@@ -4,39 +4,47 @@
   gap: .75em;
   flex-wrap: wrap;
   margin-block: 1em;
-  > * { width: calc(50% - .375em) };
+  li { width: calc(50% - .375em) }
 }
 
-.thread {
-  time {
-    font-size: .75em;
-    color: var(--base-400);
-    display: inline-block;
-    margin: .25em .5em;
-  }
+.image-zoom {
+  aside { text-align: center }
+
+  ul { display: inline-flex }
+
+  li { max-width: 10em }
+
+  img { border-radius: .25em }
+}
+
+.thread time {
+  display: inline-block;
+  margin: .25em .5em;
+  font-size: .75em;
+}
+
+.post {
+  background-color: var(--base-200);
+  text-wrap: balance;
+  padding: .5em 1em;
+  border-radius: 1em;
+  max-width: 66%;
+  p { color: var(--base-800); line-height: 1.33 }
+}
+
+.reply {
+  text-align: right;
   .post {
-    background-color: var(--base-200);
-    text-wrap: balance;
-    padding: .5em 1em;
-    border-radius: 1em;
-    max-width: 66%;
-    p { color: var(--base-800); line-height: 1.33 }
+    background-color: var(--main-500);
+    margin-left: auto;
+    text-align: left;
+    p { color: white; }
   }
+}
 
-  .reply {
-    text-align: right;
-    .post {
-      background-color: var(--main-500);
-      margin-left: auto;
-      text-align: left;
-      p { color: white; }
-    }
-  }
-
-  .emoji {
-    font-size: 3em;
-    line-height: .75;
-  }
+.emoji {
+  font-size: 3em;
+  line-height: .75;
 }
 
 .chat-form {
