--- a/packages/examples/simple-crm/app/@global/ui.css
+++ b/packages/examples/simple-crm/app/@global/ui.css
@@ -1,13 +1,34 @@
 
+/*
+  For
+
+  1. islands, forms, global headers & footers
+  2. sinle-page applications
+*/
+
 .ui {
-  font-size: 14px;
   color: var(--base-700);
+  font-size: var(--ui);
   line-height: 1.25;
 
   figure, h1, h2, h3, h4, h5 { margin: 0 }
 
-
   [hidden] { display: none }
+
+  svg {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .icon {
+    width: 1.25em;
+    height: 1.25em;
+    stroke-width: 1.5;
+    stroke: currentColor;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    fill: none;
+  }
 
   p {
     margin: .25em 0;
@@ -15,16 +36,17 @@
   }
 
   h1 {
-    font-size: 1.25em;
+    font-size: 2em;
     font-weight: 600;
     letter-spacing: -.025em;
   }
 
   h2 {
-    font-size: 1.125em;
+    font-size: 1.5em;
     font-weight: 550;
   }
 
+  /* with possible icon prefix */
   h1, h2, h3 {
     align-items: center;
     display: flex;
@@ -46,11 +68,18 @@
     font-weight: 470;
   }
 
-  h5, small { font-size: .875em }
+  h5, small, time {
+    font-size: .875em
+  }
 
   ul {
     padding: 0;
     list-style: none;
   }
+
+  small, time {
+    color: var(--base-400);
+  }
+
 
 }
