--- a/packages/examples/simple-mpa/@global/global.css
+++ b/packages/examples/simple-mpa/@global/global.css
@@ -1,32 +1,57 @@
 
-*, *::before, *::after {
-  box-sizing: border-box
-}
-
-body {
-  font-family: system-ui;
-  font-size: var(--m);
-  margin: 0;
-}
-
-:focus-visible {
-  outline: .5px solid var(--base-500);
-  transition: outline-width .1s;
-  outline-offset: 1.5px
-}
-
-img {
-  max-width: 100%;
-}
+/* layer order */
+@layer settings, elements, components, containers, utilities;
 
 
-dialog {
-  padding: 1em 1.5em;
-  border-radius: .5em;
-  box-shadow: 0 0 2em var(--alpha-300);
-  border: 0;
+@layer settings {
+  *, *::before, *::after {
+    box-sizing: border-box
+  }
 
-  &::backdrop {
-    background: rgb(190 190 190 / 50%);
+  body {
+    font-family: system-ui;
+    font-size: var(--m);
+    margin: 0;
   }
 }
+
+@layer elements {
+  img {
+    max-width: 100%;
+  }
+
+  svg {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  dialog {
+    padding: 1em 1.5em;
+    border-radius: .5em;
+    box-shadow: 0 0 2em var(--alpha-300);
+    border: 0;
+
+    &::backdrop {
+      background: rgb(190 190 190 / 50%);
+    }
+  }
+}
+
+@layer components {
+  .icon {
+    width: 1.25em;
+    height: 1.25em;
+    stroke-width: 1.5;
+    stroke: currentColor;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    fill: none;
+  }
+}
+
+@layer utilities {
+  [hidden] {
+    display: none
+  }
+}
+
