--- a/packages/examples/simple-mpa/app/css/panel.css
+++ b/packages/examples/simple-mpa/app/css/panel.css
@@ -1,55 +1,50 @@
 
-.card {
-  border-color: var(--alpha-100);
-  background-color: white;
-  border-radius: .5em;
-  padding: 1em 1.5em;
+@layer components {
 
-  > header {
-    border-bottom: 1px solid var(--alpha-100);
-  }
-}
+  .card {
+    border-color: var(--alpha-100);
+    background-color: white;
+    border-radius: .5em;
+    padding: 1em 1.5em;
 
-.panel {
-  border: 1px solid transparent;
-  height: calc(100vh - 2em);
-  flex-direction: column;
-  padding: 0 .75em;
-  display: flex;
-
-  h1 {
-    font-size: 1.25em;
+    > header {
+      border-bottom: 1px solid var(--alpha-100);
+    }
   }
 
-  h2 {
-    font-size: 1.125em;
-  }
-
-  header:has(nav) {
+  .panel {
+    border: 1px solid transparent;
+    height: calc(100vh - 2em);
+    flex-direction: column;
+    padding: 0 .75em;
     display: flex;
-    align-items: center;
-    padding-block: .75em;
-    margin-bottom: 1em;
 
-    small {
-      font-weight: 450;
-      margin-right: 1em;
-    }
-
-    nav {
-      margin-left: auto;
+    header:has(nav) {
+      display: flex;
       align-items: center;
-      display: inline-flex;
-      gap: .5em;
+      padding-block: .75em;
+      margin-bottom: 1em;
+
+      small {
+        font-weight: 450;
+        margin-right: 1em;
+      }
+
+      nav {
+        margin-left: auto;
+        align-items: center;
+        display: inline-flex;
+        gap: .5em;
+      }
     }
+
+    > section {
+      padding-bottom: 2em;
+      overflow: auto;
+      flex-grow: 1;
+    }
+
+
   }
-
-  > section {
-    padding-bottom: 2em;
-    overflow: auto;
-    flex-grow: 1;
-  }
-
-
 }
 
