--- a/packages/examples/simple-mpa/app/css/navi.css
+++ b/packages/examples/simple-mpa/app/css/navi.css
@@ -1,81 +1,67 @@
 
-.navigation.panel {
+@layer container {
+  .navigation {
 
-  > header { margin-bottom: .5em }
-  > section { overflow: unset }
+    > header { margin-bottom: .5em }
+    > section { overflow: unset }
 
-  nav, details {
-    margin: 1em 0 1.5em 0;
-  }
-
-  a {
-    color: var(--base-500);
-    border: 1px solid transparent;
-    border-radius: .25em;
-    align-items: center;
-    padding: .5em .75em;
-    margin-bottom: 1px;
-    display: flex;
-    gap: .5em;
-
-    &:hover {
-      background-color: var(--alpha-50);
+    nav, details {
+      margin: 1em 0 1.5em 0;
     }
 
-    &:focus {
-      outline-width: 1px;
-    }
+    a {
+      color: var(--base-500);
+      border: 1px solid transparent;
+      border-radius: .25em;
+      align-items: center;
+      padding: .5em .75em;
+      margin-bottom: 1px;
+      display: flex;
+      gap: .5em;
 
-    &[aria-current] {
-      border-color: var(--base-300);
-      background-color: white;
-      pointer-events: none;
-      color: var(--base-900);
-      font-weight: 490;
+      &:hover { background-color: var(--alpha-50) }
 
-      .icon {
-        color: var(--main-500);
-        stroke-width: 2.1;
+      &[aria-current] {
+        background-color: var(--base-200);
+        pointer-events: none;
+        color: var(--base-900);
+
+        .icon {
+          color: var(--main-500);
+          stroke-width: 2.1;
+        }
       }
     }
+
+    summary {
+      text-transform: uppercase;
+      border-radius: .25em;
+      color: var(--base-500);
+      font-size: .75em;
+      letter-spacing: .75;
+      font-weight: 500;
+      padding: .5em .75em;
+      margin-bottom: -.75em;
+      cursor: pointer;
+    }
+
+    details nav {
+      border-left: 3px solid var(--base-200);
+      margin-left: .75em;
+
+      a { font-weight: 400; padding: .25em .5em }
+    }
   }
-
-  summary {
-    text-transform: uppercase;
-    border-radius: .25em;
-    color: var(--base-500);
-    font-size: .75em;
-    letter-spacing: .75;
-    font-weight: 500;
-    padding: .5em .75em;
-    margin-bottom: -.75em;
-    cursor: pointer;
-  }
-
-  details nav {
-    border-left: 3px solid var(--base-200);
-    margin-left: .75em;
-
-    a { font-weight: 400; padding: .25em .5em }
-  }
 }
 
 
-.plan-free svg {
-  color: var(--base-300);
+@layer utilities {
+  .plan-free svg  { color: var(--base-300) }
+  .plan-pro svg   {color: var(--blue-500) }
+  .plan-enterprise svg { color: var(--green-500) }
+
+  .size-s svg  { color: var(--base-300) }
+  .size-m svg  { color: var(--base-400) }
+  .size-l svg  { color: var(--base-700) }
+  .size-xl svg { color: var(--base-950) }
 }
-.plan-pro svg {
-  color: var(--blue-500);
-}
-.plan-enterprise svg {
-  color: var(--green-500);
-}
-
-.size-s svg { color: var(--base-300) }
-.size-m svg { color: var(--base-400) }
-.size-l svg { color: var(--base-700) }
-.size-xl svg { color: var(--base-950) }
-
-
-
-
