--- a/packages/examples/simple-mpa/app/css/navi.css
+++ b/packages/examples/simple-mpa/app/css/navi.css
@@ -1,5 +1,6 @@
 
-@layer container {
+@layer components {
+
   .navigation {
 
     > header { margin-bottom: .5em }
@@ -52,10 +53,7 @@
       a { font-weight: 400; padding: .25em .5em }
     }
   }
-}
 
-
-@layer utilities {
   .plan-free svg  { color: var(--base-300) }
   .plan-pro svg   {color: var(--blue-500) }
   .plan-enterprise svg { color: var(--green-500) }
@@ -64,4 +62,5 @@
   .size-m svg  { color: var(--base-400) }
   .size-l svg  { color: var(--base-700) }
   .size-xl svg { color: var(--base-950) }
+
 }
